@@ -1,3 +1,8 @@
+2008-10-17  Peter Faulkner  <pjwf@hep.ph.bham.ac.uk>
+	* Tag as TrigT1CaloMonitoring-00-04-02
+        * Distinguish between missing ROD fragment and no payload
+        * in ROD monitoring.
+
 2008-10-13  Peter Faulkner  <pjwf@hep.ph.bham.ac.uk>
 	* Tag as TrigT1CaloMonitoring-00-04-01
         * Add options to ignore bad TriggerTowers in comparison with
